--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -14,8 +14,8 @@ body {
     overflow-x: hidden;
 }
 
-.xeolabsLogo {
-    background-image: url("../images/a-xeolabs-project.png");
+.xeographicsLogo {
+    background-image: url("../images/a-xeographics-project.png");
     position: absolute;
     left: 0;
     top: 0;
