--- a/yuiDocThemes/xeoengine/partials/index.handlebars
+++ b/yuiDocThemes/xeoengine/partials/index.handlebars
@@ -7,9 +7,9 @@
         <ul>
             <li><a href="http://xeoengine.org/index.html#concept">Introduction</a></li>
             <li><a href="http://xeoengine.org/examples/">Examples</a></li>
-            <li><a href="https://github.com/xeolabs/xeoengine/wiki">Wiki</a></li>
-            <li><a href="https://github.com/xeolabs/xeoengine/issues">Issues</a></li>
-            <li><a href="https://github.com/xeolabs/xeoengine">Sourcecode</a></li>
+            <li><a href="https://github.com/xeographics/xeoengine/wiki">Wiki</a></li>
+            <li><a href="https://github.com/xeographics/xeoengine/issues">Issues</a></li>
+            <li><a href="https://github.com/xeographics/xeoengine">Sourcecode</a></li>
         </ul>
 
     </div>
